html pages skeleton

--- a/about_page.html
+++ b/about_page.html
@@ -1,10 +1,17 @@
 <html>
     <header>
         <title>About</title>
-        <style></style>
-        <script></script>
+        <link rel="stylesheet" href="webpage_design.css">
+        <script src="currency_exchange_code.js" defer></script>
     </header>
     <body>
-        
+        <!--Nav Bar-->
+        <nav id="main-nav">
+            <ul>
+                <li><a href="home_page.html">Home</a></li>
+                <li><a href="functionality_page.html">Currency Exchange</a></li>
+                <li><a href="about_page.html">About</a></li>
+            </ul>
+        </nav>
     </body>
 </html>
