--- a/functionality_page.html
+++ b/functionality_page.html
@@ -2,15 +2,15 @@
     <head>
         <title>Currency Exchange</title>
         <link rel="stylesheet" href="webpage_design.css">
-        <script src="" defer></script>
+        <script src="currency_exchange_code.js" defer></script>
     </head>
     <body>
         <!-- Nav Bar-->
         <nav id="main-nav">
             <ul>
+                <li><a href="home_page.html">Home</a></li>
+                <li><a href="functionality_page.html">Currency Exchange</a></li>
                 <li><a href="about_page.html">About</a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
             </ul>
         </nav>
         
