--- a/functionality_page.html
+++ b/functionality_page.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <!-- Nav Bar-->
-        <nav id="main-nav">
+        <nav class="main-nav">
             <ul>
                 <li><a href="home_page.html">Home</a></li>
                 <li><a href="functionality_page.html">Currency Exchange</a></li>
@@ -25,5 +25,10 @@
         <div id="chartDiv">
 
         </div>
+        <!-- Footer -->
+        <footer class="footer">
+            <h3>INST377 Group Project</h3>
+            <p>Katherine Argente, Daniel Gwira, Ariel Hong, Larissa Musaga, Arshul Shaik</p>
+        </footer>
     </body>
 </html>
