--- a/home_page.html
+++ b/home_page.html
@@ -13,5 +13,11 @@
                 <li><a href="about_page.html">About</a></li>
             </ul>
         </nav>
+
+        <!-- Footer -->
+        <footer class="footer">
+            <h3>INST377 Group Project</h3>
+            <p>Katherine Argente, Daniel Gwira, Ariel Hong, Larissa Musaga, Arshul Shaik</p>
+        </footer>
     </body>
 </html>
