--- a/functionality_page.html
+++ b/functionality_page.html
@@ -6,11 +6,12 @@
     </head>
     <body>
         <!-- Nav Bar-->
-        <nav class="main-nav">
+        <nav id="main-nav">
             <ul>
                 <li><a href="home_page.html">Home</a></li>
                 <li><a href="functionality_page.html">Currency Exchange</a></li>
                 <li><a href="about_page.html">About</a></li>
+                <li><a href="help_page.html">Help</a></li>
             </ul>
         </nav>
         
