--- a/home_page.html
+++ b/home_page.html
@@ -11,6 +11,7 @@
                 <li><a href="home_page.html">Home</a></li>
                 <li><a href="functionality_page.html">Currency Exchange</a></li>
                 <li><a href="about_page.html">About</a></li>
+                <li><a href="help_page.html">Help</a></li>
             </ul>
         </nav>
 
