--- a/functionality_page.html
+++ b/functionality_page.html
@@ -17,7 +17,7 @@
         
         <div id="conversionDiv">
             <h1>Find Exchange Rate</h1>
-            <form id="exchangeRateForm" method="get" action="" onsubmit=" ; return false">
+            <form id="exchangeRateForm" method="get" action="" onsubmit="addText(); return false">
                 <select id="from" class="currency" required></select>
                 <select id="to" class="currency" required></select>
                 <input type="submit">
