--- a/functionality_page.html
+++ b/functionality_page.html
@@ -23,6 +23,12 @@
                 <input type="submit">
             </form>
         </div>
+        <div id="converted">
+
+        </div>
+        <a href="https://www.freeforexapi.com">
+            <img alt="Free Forex API" src="https://www.freeforexapi.com/Images/link.png" height="20">
+        </a>
         <div id="chartDiv">
 
         </div>
