--- a/functionality_page.html
+++ b/functionality_page.html
@@ -26,6 +26,7 @@
         <div id="converted">
 
         </div>
+        <p>Thank you to Free Forex API for providing real-time foreign exchange rates for the major currency pairs.</p>
         <a href="https://www.freeforexapi.com">
             <img alt="Free Forex API" src="https://www.freeforexapi.com/Images/link.png" height="20">
         </a>
