--- a/functionality_page.html
+++ b/functionality_page.html
@@ -20,7 +20,11 @@
             <form id="exchangeRateForm" method="get" 
             action="https://v6.exchangerate-api.com/v6/d56e314bee9151ab29d0903d/latest/USD" 
             onsubmit="addText(); return false">
+                <label for="amount">Amount: </label>
+                <input type="number" id="amount" step="0.01" required>
+                <label for="from">From: </label>
                 <select id="from" class="currency" required></select>
+                <label for="to">To: </label>
                 <select id="to" class="currency" required></select>
                 <input type="submit">
             </form>
