--- a/home_page.html
+++ b/home_page.html
@@ -15,6 +15,13 @@
             </ul>
         </nav>
 
+         <!-- Background Image Section -->
+    <div style="background-image: url('https://png.pngtree.com/thumb_back/fw800/background/20230722/pngtree-world-s-primary-currency-exchange-in-3d-render-on-black-background-image_3770009.jpg'); height: 1000px; background-size: cover; background-position: center;">
+        <!-- Content can go here -->
+    </div>
+
+
+        
         <!-- Footer -->
         <footer class="footer">
             <h3>INST377 Group Project</h3>
