modified bg image to have some blur and lower opacity

--- a/functionality_page.html
+++ b/functionality_page.html
@@ -41,10 +41,16 @@
         <div id="chartDiv">
 
         </div>
+
+        <!-- Background Image Section -->
+        <div class="bg-image"> </div>
+        
         <!-- Footer -->
         <footer class="footer">
             <h3>INST377 Group Project</h3>
             <p>Katherine Argente, Daniel Gwira, Ariel Hong, Larissa Musaga, Arshul Shaik</p>
         </footer>
+
+
     </body>
 </html>
