--- a/help_page.html
+++ b/help_page.html
@@ -21,8 +21,6 @@
         </ul>
     </nav>
 
-
-
     <!-- Help Section -->
     <section class="help-section">
         <!-- Title of the Help Section -->
@@ -72,6 +70,9 @@
             <button type="submit">Send Message</button>
         </form>
     </section>
+
+    <!-- Background Image Section -->
+    <div class="bg-image"></div>
 
     <!-- Footer -->
     <footer class="footer">
