larissa: inserted wallpaper without watermark

--- a/home_page.html
+++ b/home_page.html
@@ -21,7 +21,7 @@
            <div class "bg-image"></div>
          -->
 
-        <img src="https://png.pngtree.com/thumb_back/fw800/background/20230722/pngtree-world-s-primary-currency-exchange-in-3d-render-on-black-background-image_3770009.jpg" alt="global" class="background-image"/>
+        <img src="https://wise.com/imaginary-v2/money-banks-poland-zloty-money.jpg" alt="global" class="background-image"/>
     
         <!-- Footer -->
         <footer class="footer">
