functionality_page.html

--- a/functionality_page.html
+++ b/functionality_page.html
@@ -41,6 +41,9 @@
         <div id="chartDiv">
 
         </div>
+        <div id="chartContainer">
+            <canvas id="topCurrenciesChart"></canvas>
+        </div>
 
         <!-- Background Image Section -->
         <div class="bg-image"> </div>
