--- a/public/functionality_page.html
+++ b/public/functionality_page.html
@@ -39,10 +39,11 @@
         </div>
         
         <div id="chartDiv">
-
+            <canvas id="myChart"></canvas>
         </div>
-        <div id="chartContainer">
-            <canvas id="topCurrenciesChart"></canvas>
+
+        <div id="videoDiv">
+            
         </div>
 
         <!-- Background Image Section -->
