--- a/public/functionality_page.html
+++ b/public/functionality_page.html
@@ -3,11 +3,8 @@
         <title>Currency Exchange</title>
         <link rel="stylesheet" href="webpage_design.css">
         <script src="currency_exchange_code.js" defer></script>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
     </head>
-
-
-
-
 
     <body>
         <!-- Nav Bar-->
@@ -24,7 +21,7 @@
             <h1>Find Exchange Rate</h1>
             <form id="exchangeRateForm" method="get" 
             action="https://v6.exchangerate-api.com/v6/d56e314bee9151ab29d0903d/latest/USD" 
-            onsubmit="addText(); return false">
+            onsubmit="addText(); makeChart(); return false">
                 <label for="amount">Amount: </label>
                 <input type="number" id="amount" step="0.01" required>
                 <label for="from">From: </label>
@@ -38,7 +35,7 @@
 
         </div>
         
-        <div id="chartDiv">
+        <div id="chartDiv" style="visibility: hidden;">
             <canvas id="myChart"></canvas>
         </div>
 
