comment on help_page (need to change form action)

--- a/public/help_page.html
+++ b/public/help_page.html
@@ -55,7 +55,8 @@
         <!-- Prompt to contact support team -->
         <p>If you can't find the answer to your question here, feel free to contact our support team for further assistance. Please fill out the form below:</p>
         <!-- Contact form -->
-        <form action="submit_contact_form.php" method="POST">
+        <!-- URGENT: need to change form action? reference JS library -->
+        <form action="submit_contact_form.php" method="POST"> 
             <!-- Input fields for name, email, and message -->
             <label for="name">Your Name:</label><br>
             <input type="text" id="name" name="name" required><br>
