--- a/public/help_page.html
+++ b/public/help_page.html
@@ -56,7 +56,7 @@
         <p>If you can't find the answer to your question here, feel free to contact our support team for further assistance. Please fill out the form below:</p>
         <!-- Contact form -->
         <!-- URGENT: need to change form action? reference JS library -->
-        <form action="submit_contact_form.php" onsubmit="" method="POST"> 
+        <form action="submit_contact_form" onsubmit="" method="post"> 
             <!-- Input fields for name, email, and message -->
             <label for="name">Your Name:</label><br>
             <input type="text" id="name" name="name" required><br>
