larissa: adding Thank you page

--- a/public/help_page.html
+++ b/public/help_page.html
@@ -8,6 +8,7 @@
     <title>Help</title>
     <!-- Link to CSS stylesheet -->
     <link rel="stylesheet" href="webpage_design.css">
+    <script src="currency_exchange_code.js" defer></script>
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -55,6 +56,8 @@
         <!-- Prompt to contact support team -->
         <p>If you can't find the answer to your question here, feel free to contact our support team for further assistance. Please fill out the form below:</p>
         <!-- Contact form -->
+
+
         <!-- URGENT: need to change form action? reference JS library -->
         <form id="contactForm" onsubmit="submitContactForm(event)" method="post"> 
             <!-- Input fields for name, email, and message -->
@@ -68,8 +71,11 @@
             <textarea id="message" name="message" rows="4" required></textarea><br>
             
             <!-- Submit button -->
-            <button type="submit">Send Message</button>
+            <button type="submit">Send Message</button>  
         </form>
+
+
+        
     </section>
 
     <!-- Background Image Section -->
