larissa: js modifications

--- a/public/ThankYou_page.html
+++ b/public/ThankYou_page.html
@@ -23,7 +23,19 @@
         <h1>Thank You!</h1>
         <p>We have received your submission, We will get back to you soon ✉.</p>
     </div>
-       
+       <!---css animation--> 
+<title>Ripple Loader Effect</title>
+<div class="loader-container">
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  </div>
+
+
+
+
     
         <!-- Background Image Section -->
         <div class="bg-image"></div>
