fix index.js, add css to thank you page, fix js frontend

--- a/public/ThankYou_page.html
+++ b/public/ThankYou_page.html
@@ -21,7 +21,7 @@
         
     <div class="thank-you-message">
         <h1>Thank You!</h1>
-        <p>We have received your submission, We will get back to you soon ✉.</p>
+        <p>We have received your submission, We will get back to you soon.</p>
     </div>
        <!---css animation--> 
 <title>Ripple Loader Effect</title>
