uniform css navbar across pages

--- a/public/help_page.html
+++ b/public/help_page.html
@@ -1,15 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+<header>
     <!-- Meta tags -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <!-- Page title -->
     <title>Help</title>
     <!-- Link to CSS stylesheet -->
     <link rel="stylesheet" href="webpage_design.css">
     <script src="currency_exchange_code.js" defer></script>
-</head>
+</header>
 <body>
     <!-- Navigation Bar -->
     <nav id="main-nav">
